--- a/static/css/index.css
+++ b/static/css/index.css
@@ -3,12 +3,12 @@
     width: 2rem;
 }
 main{
-    background: url('../IMGs/fondo.jpg') no-repeat center center;
+    background: url('../IMGs/wallpaper.jpg') no-repeat center center;
     background-size: cover;
     align-content: center;
-    height: 100vh; /* Asegura que el contenedor ocupe toda la altura de la ventana */
-    width: 100%; /* Asegura que el contenedor ocupe todo el ancho disponible */
-    color: white; /* Color del texto para asegurar que se lea sobre la imagen */
+    height: 100vh;
+    width: 100%; 
+    color: white; 
 }
 .card2{
     position: relative;
